--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "url": "git+https://github.com/rqft/api.git"
   },
   "nodemonConfig": {
-    "ignore": ["kv/"]
+    "ignore": [
+      "kv/"
+    ]
   },
   "author": "",
   "license": "ISC",
@@ -22,8 +24,10 @@
   "homepage": "https://github.com/rqft/api#readme",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/fluent-ffmpeg": "^2.1.20",
     "@types/node-fetch": "^2.5.0",
     "express": "^4.18.1",
+    "fluent-ffmpeg": "^2.1.2",
     "imagescript": "^1.2.9",
     "node-fetch": "^2.5.0",
     "wilson-kv": "^1.0.4"
