--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
   },
   "homepage": "https://github.com/rqft/api#readme",
   "dependencies": {
-    "@types/express": "^4.17.13",
-    "@types/fluent-ffmpeg": "^2.1.20",
-    "@types/node-fetch": "^2.5.0",
-    "express": "^4.18.1",
-    "fluent-ffmpeg": "^2.1.2",
     "imagescript": "^1.2.9",
-    "node-fetch": "^2.5.0",
+    "julian-utils": "^1.0.1",
+    "kevin-http": "^1.0.5",
+    "pariah": "^2.8.91",
     "wilson-kv": "^1.0.4"
+  },
+  "devDependencies": {
+    "@types/node": "^18.0.0",
+    "@types/node-fetch": "^2.6.2",
+    "node-fetch": "^2.5.0"
   }
 }
