--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
   "dependencies": {
     "imagescript": "^1.2.9",
     "julian-utils": "^1.0.1",
-    "kevin-http": "^1.0.5",
+    "kevin-http": "^1.0.8",
     "pariah": "^2.8.91",
-    "wilson-kv": "^1.0.4"
+    "wilson-kv": "^1.0.4",
+    "wombo-dream-api": "^0.1.6"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
