--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   "homepage": "https://github.com/rqft/api#readme",
   "dependencies": {
     "imagescript": "^1.2.9",
-    "julian-utils": "^1.0.1",
-    "kevin-http": "^1.0.14",
-    "pariah": "^2.8.91",
-    "wilson-kv": "^1.0.4",
+    "@rqft/utils": "^1.0.0",
+    "@rqft/http": "^1.0.0",
+    "@rqft/fetch": "^1.0.0",
+    "@rqft/kv": "^1.0.0",
     "wombo-dream-api": "^0.1.6"
   },
   "devDependencies": {
