--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "@rqft/utils": "^1.0.0",
     "imagescript": "^1.2.9",
     "mathjs": "^11.1.0",
+    "prettier": "^2.5.0",
     "wombo-dream-api": "^0.1.6"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
     "@types/node-fetch": "^2.6.2",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "eslint": "^8.26.0",
     "node-fetch": "^2.5.0"
   }
 }
